--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <script src="./lib/easystar-0.4.4.js"></script> -->
     <script src="./src/Scenes/Load.js"></script>
     <script src="./src/Scenes/Game.js"></script>
+    <script src="./src/Scenes/DriftTrack.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
